<resources>
    <string name="appName">Langbook</string>
    <string name="appCredits">App developed by Carlos Sancho Ramirez</string>
    <string name="welcomeTitle">Welcome to Langbook!</string>
    <string name="welcomeText">Langbook is intended to be a tool to help people in their task of learning new languages and master the ones they may already know. Langbook will allow you to store words, grammar rules, classify them in different ways according to your needs, test your knowledge, and much more!</string>
    <string name="languagePickerActivityTitle">Select a language</string>
    <string name="linkageMechanismSelectorActivityTitle">Select an option</string>
    <string name="wordEditorActivityTitle">Fill representations</string>
    <string name="sentenceEditorActivityTitle">Type your sentence</string>
    <string name="spanEditorActivityTitle">Add spans</string>
    <string name="correlationPickerActivityTitle">Select its correlation</string>
    <string name="definitionEditorActivityTitle">Definition for %s</string>
    <string name="acceptationPickerActivityTitle">Select an acceptation</string>
    <string name="matchingBunchesPickerActivityTitle">Include in bunches</string>
    <string name="quizSelectorActivityTitle">Select a quiz</string>
    <string name="quizEditorActivityTitle">Select quiz parameters</string>
    <string name="correlationDetailsActivityTitle">Correlation %s</string>
    <string name="correlationDetailsIdEntry">Displaying details for correlation %s</string>
    <string name="correlationDetailsPartiallySharedHeader">Other correlations sharing %s</string>
    <string name="sentenceDetailsActivityTitle">Sample sentence</string>
    <string name="searchFieldHint">Search Here</string>
    <string name="anyLanguageRequired">Add a language first</string>
    <string name="accDetailsSectionSummary">Displaying details for acceptation %s</string>
    <string name="accDetailsSectionLanguage">Language</string>
    <string name="accDetailsSectionDefinition">Definition</string>
    <string name="accDetailsSectionCharacterCompositionDefinition">Character composition definition</string>
    <string name="accDetailsSectionOrigin">Coming from</string>
    <string name="accDetailsSectionAppliedRule">Applied rule</string>
    <string name="accDetailsSectionAppliedAgent">Applied agent</string>
    <string name="accDetailsSectionSubtypes">Subtypes</string>
    <string name="accDetailsSectionSynonyms">Synonyms</string>
    <string name="accDetailsSectionTranslations">Translations</string>
    <string name="accDetailsSectionAcceptationsSharingCorrelationArray">Other acceptations written in the same way</string>
    <string name="accDetailsSectionAcceptationsSharingTexts">Other acceptations sharing some alphabets</string>
    <string name="accDetailsSectionBunchesWhereIncluded">Bunches where included</string>
    <string name="accDetailsSectionDerivedAcceptations">Derived acceptations</string>
    <string name="accDetailsSectionAcceptationsInThisBunch">Acceptations included in this bunch</string>
    <string name="accDetailsSectionSampleSentences">Sample sentences</string>
    <string name="accDetailsSectionInvolvedAgents">Involved agents</string>
    <string name="menuItemAdd">Add</string>
    <string name="menuItemCheckAlphabets">Check alphabets</string>
    <string name="menuItemCheckConversions">Check conversions</string>
    <string name="menuItemQuiz">Start quiz</string>
    <string name="menuItemNewAgent">New agent</string>
    <string name="menuItemNewSentence">New Sentence</string>
    <string name="menuItemSettings">Preferences</string>
    <string name="menuItemAbout">About</string>
    <string name="menuItemBunchChildrenQuiz">Quiz as bunch</string>
    <string name="menuItemNewQuizDefinition">New Quiz</string>
    <string name="menuItemLinkConcept">Link Concept</string>
    <string name="menuItemLinkSentence">Link Sentence</string>
    <string name="menuItemIncludeAcceptation">Include acceptation</string>
    <string name="menuItemIncludeInBunch">Include in bunch</string>
    <string name="menuItemIncludeDefinition">Include definition</string>
    <string name="menuItemDeleteDefinition">Delete definition</string>
    <string name="menuItemEdit">Edit</string>
    <string name="menuItemSave">Save</string>
    <string name="menuItemDelete">Delete</string>
    <string name="menuItemConfirm">Confirm</string>
    <string name="menuItemAddSpan">Add</string>
    <string name="menuItemNewAgentAsSource">as Source</string>
    <string name="menuItemNewAgentAsDiff">as Diff</string>
    <string name="menuItemNewAgentAsTarget">as Target</string>
    <string name="menuItemUpdateRepresentation">Update representation</string>
    <string name="menuItemAddCharacterComposition">Add composition</string>
    <string name="menuItemEditCharacterComposition">Edit composition</string>
    <string name="menuItemDeleteCharacterComposition">Delete composition</string>
    <string name="deleteAcceptationConfirmationText">Are you sure that you want to remove this acceptation?</string>
    <string name="deleteDefinitionConfirmationText">Are you sure that you want to remove this acceptation definition?</string>
    <string name="deleteFromBunchConfirmationText">Are you sure that you want to remove this acceptation from bunch %s?</string>
    <string name="deleteAcceptationFromBunchConfirmationText">Are you sure that you want to remove acceptation %s from this bunch?</string>
    <string name="deleteAgentConfirmationText">Are you sure that you want to remove this agent? All its effects will be reverted.</string>
    <string name="deleteQuizConfirmationText">Are you sure that you want to remove this quiz and all its related tracked knowledge?</string>
    <string name="deleteSentenceConfirmationText">Are you sure that you want to remove this sentence?</string>
    <string name="deleteAlphabetConfirmationText">Are you sure that you want to remove this alphabet?</string>
    <string name="deleteLanguageConfirmationText">Are you sure that you want to remove this language?</string>
    <string name="wordEditorWrongConversionFieldText">-- Wrong --</string>
    <string name="wordEditorNextButton">Next</string>
    <string name="wordEditorWrongTextError">Invalid values present</string>
    <string name="removeButton">Remove</string>
    <string name="correlationPickerNextButton">Next</string>
    <string name="sentenceEditorNextButton">Next</string>
    <string name="shareConceptLinkOption">Share concept</string>
    <string name="duplicateAcceptationLinkOption">Duplicate acceptation</string>
    <string name="settingsHeaderPreferredAlphabet">Preferred alphabet</string>
    <string name="settingsHeaderSqliteDatabase">SQLite database management</string>
    <string name="settingsHeaderStreamedDatabase">Streamed database management</string>
    <string name="importButton">Import</string>
    <string name="exportButton">Export</string>
    <string name="importFailure">Unable to import database</string>
    <string name="importSuccess">Database imported successfully</string>
    <string name="exportFailure">Unable to export database</string>
    <string name="exportSuccess">Database exported successfully</string>
    <string name="saveDatabaseError">Error saving database</string>
    <string name="selectLocationDialogTitle">Introduce its file path</string>
    <string name="selectLocationDialogSave">Save</string>
    <string name="selectLocationDialogLoad">Load</string>
    <string name="quizQuestionsHeader">Question fields</string>
    <string name="quizAnswersHeader">Answer fields</string>
    <string name="removeFieldButton">Remove</string>
    <string name="startQuizButton">Start quiz</string>
    <string name="noValidQuestions">No valid questions can be presented for the given quiz definition</string>
    <string name="questionTypeNoValue"> -- Select type -- </string>
    <string name="questionTypeSameAcceptation">same acceptation</string>
    <string name="questionTypeSameConcept">same concept</string>
    <string name="questionTypeAppliedRule">applied rule</string>
    <string name="revealAnswerButton">Reveal answer</string>
    <string name="badAnswerButton">Bad</string>
    <string name="goodAnswerButton">Good</string>
    <string name="questionLeaveConfirmation">Would you like to leave this quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newAgentFeedback">Agent included</string>
    <string name="updateAgentFeedback">Agent updated</string>
    <string name="newAcceptationFeedback">Acceptation included</string>
    <string name="deleteAcceptationFeedback">Acceptation deleted</string>
    <string name="deleteAgentFeedback">Agent deleted</string>
    <string name="deleteQuizzesFeedback">Quizzes deleted</string>
    <string name="deleteSentenceFeedback">Sentence deteled</string>
    <string name="includeInBunchOk">Acceptation included in bunch</string>
    <string name="acceptationAlreadyIncludedInBunch">Already included in bunch</string>
    <string name="includeSupertypeOk">Included definition</string>
    <string name="deleteDefinitionFeedback">Removed definition for this acceptation</string>
    <string name="deleteFromBunchFeedback">Acceptation removed from bunch %s</string>
    <string name="deleteAcceptationFromBunchFeedback">Acceptation %s removed from this bunch</string>
    <string name="includeSentenceFeedback">Sentence included</string>
    <string name="updateSentenceFeedback">Sentence updated</string>
    <string name="newAgentError">Unable to include agent</string>
    <string name="updateAgentError">Unable to update agent</string>
    <string name="spanEditorNoSpanPresentError">No span present</string>
    <string name="updateConversionFeedback">Conversion updated</string>
    <string name="includeAlphabetFeedback">Alphabet included</string>
    <string name="includeAlphabetKo">Unable to include alphabet</string>
    <string name="removeAlphabetFeedback">Alphabet removed</string>
    <string name="removeLanguageFeedback">Language removed</string>
    <string name="removeLanguageKo">Unable to remove</string>
    <string name="conceptSharedFeedback">Concept shared</string>
    <string name="conceptSharedKo">Unable to share concept</string>
    <string name="acceptationLinkedFeedback">Acceptation linked</string>
    <string name="conversionEditorTitle">%s \u2192 %s</string>
    <string name="conversionEditorSourceLabel">From</string>
    <string name="conversionEditorTargetLabel">To</string>
    <string name="noChangeRequired">Nothing to change</string>
    <string name="checkConversionButtonText">Check</string>
    <string name="languageCodeLabel">Language code</string>
    <string name="languageCodeHint">\'es\' for Spanish or \'en\' for English</string>
    <string name="languageAlphabetCountLabel">Number of alphabets</string>
    <string name="languageAdderNextButton">Next</string>
    <string name="languageAdderBadLanguageCode">Wrong language code</string>
    <string name="languageAdderBadAlphabetCount">Wrong number of alphabets</string>
    <string name="languageAdderActivityTitle">New language details</string>
    <string name="languageAdderLanguageCodeInUse">Language code already in use</string>
    <string name="addLanguageButton">Add language</string>
    <string name="definitionEditorBaseConceptTitle">Base concept</string>
    <string name="definitionEditorChangeButton">Change</string>
    <string name="definitionEditorComponentsPanelTitle">Complements</string>
    <string name="definitionEditorSaveButton">Save</string>
    <string name="characterCompositionEditorFirstLabel">First</string>
    <string name="characterCompositionEditorSecondLabel">Second</string>
    <string name="characterCompositionEditorTypeLabel">Type</string>
    <string name="characterCompositionEditorSaveButtonText">Save</string>
    <string name="addButtonText">Add</string>
</resources>