<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuItemNewAgent"
        android:title="@string/menuItemNewAgent"
        android:showAsAction="never">

        <menu
            android:title="@string/menuItemNewAgent">

            <item
                android:id="@+id/menuItemNewAgentAsSource"
                android:title="@string/menuItemNewAgentAsSource"
                android:showAsAction="never"/>

            <item
                android:id="@+id/menuItemNewAgentAsDiff"
                android:title="@string/menuItemNewAgentAsDiff"
                android:showAsAction="never"/>

            <item
                android:id="@+id/menuItemNewAgentAsTarget"
                android:title="@string/menuItemNewAgentAsTarget"
                android:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/menuItemNewSentence"
        android:title="@string/menuItemNewSentence"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menuItemDeleteAcceptation"
        android:title="@string/menuItemDelete"
        android:showAsAction="never"/>
</menu>
