<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuItemQuiz"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuItemQuiz"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemNewAgent"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menuItemNewAgent"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemCheckAlphabets"
        android:title="@string/menuItemCheckAlphabets"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemCheckConversions"
        android:title="@string/menuItemCheckConversions"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemSettings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menuItemSettings"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menuItemAbout"
        android:showAsAction="ifRoom"/>
</menu>
