<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/welcomeTextPadding"
            android:gravity="center_horizontal"
            android:textSize="@dimen/welcomeTitleTextSize"
            android:text="@string/welcomeTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/welcomeTextPadding"
            android:text="@string/welcomeText"/>

        <Button
            android:id="@+id/addLanguageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/addLanguageButton"/>
    </LinearLayout>
</ScrollView>
