<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characterCompositionEditorFirstLabel"/>

        <AutoCompleteTextView
            android:id="@+id/firstField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/firstLabel"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:completionThreshold="1"/>

        <TextView
            android:id="@+id/secondLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characterCompositionEditorSecondLabel"/>

        <AutoCompleteTextView
            android:id="@+id/secondField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/secondLabel"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:completionThreshold="1"/>

        <TextView
            android:id="@+id/compositionTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characterCompositionEditorTypeLabel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/compositionTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/compositionTypeLabel"/>

            <Button
                android:id="@+id/addCompositionTypeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addButtonText"/>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characterCompositionEditorSaveButtonText"/>
    </LinearLayout>
</ScrollView>
