<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linkageMechanismRadioGroupPadding">

        <RadioButton
            android:id="@+id/shareConceptRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shareConceptLinkOption"/>

        <RadioButton
            android:id="@+id/duplicateAcceptationRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duplicateAcceptationLinkOption"/>
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/linkageMechanismInfoPadding"/>
    </ScrollView>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuItemConfirm"/>
</LinearLayout>
