<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"/>

    <LinearLayout
        android:id="@+id/fieldsPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/revealAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/revealAnswerButton"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/rateButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/badAnswerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/badAnswerButton"/>

        <Button
            android:id="@+id/goodAnswerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goodAnswerButton"/>
    </LinearLayout>
</LinearLayout>
