<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/definitionEditorBaseConceptTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/baseConceptText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"/>

            <Button
                android:id="@+id/baseConceptChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definitionEditorChangeButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/definitionEditorComponentsPanelTitle"/>

            <Button
                android:id="@+id/complementsAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addComplementButton"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/complementsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/definitionEditorSaveButton"/>
    </LinearLayout>
</ScrollView>
