<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quizQuestionsHeader"/>

            <Button
                android:id="@+id/addQuestionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addButtonText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/quiz_editor_field_entry"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quizAnswersHeader"/>

            <Button
                android:id="@+id/addAnswerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addButtonText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/answerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/quiz_editor_field_entry"/>
        </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startQuizButton"/>
    </LinearLayout>
</ScrollView>
